service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
spec:
  selector:
    app: sample-app
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 8080
