ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app
spec:
  defaultBackend:
    service:
      name: sample-app
      port: 
        number: 80
